# scriptor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
src/scriptor/: __init__.py  main.py  project.py
